--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -44,6 +44,10 @@ h1 {
     font-size: 2.5rem;
     /* Scales to 40px if base is 16px */
 }
+h6 {
+    font-weight: 500;
+    color: black;
+}
 
 p {
     margin-bottom: 1.5rem;
