--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -88,6 +88,11 @@ button {
     min-width: 150px;
     padding: 0 16px;
     height: 36px;
+    &:focus{
+        outline: none;
+        border: none;
+        box-shadow: none;
+    }
 }
 select,
 input {
@@ -101,7 +106,7 @@ input {
 
     width: 200px;
     box-shadow: none;
-    color: hbo.$text-medium-emphasis;
+    color: gray;
     min-width: 250px;
 
     &:active {
