--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -88,7 +88,7 @@ button {
     min-width: 150px;
     padding: 0 16px;
     height: 36px;
-    &:focus{
+    &:focus {
         outline: none;
         border: none;
         box-shadow: none;
@@ -104,7 +104,7 @@ input {
     gap: 16px;
     padding: 0 31px 0 12px;
 
-    width: 200px;
+    /* width: 200px; */
     box-shadow: none;
     color: gray;
     min-width: 250px;
